# PCBA-MC001A1V01

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  partitions.csv  sdkconfig  sdkconfig.old
components/SquareLine_cb/: CMakeLists.txt  SquareLine_cb.c  SquareLine_cb.h
components/aw9523/: CMakeLists.txt  aw9523.c
components/display/: CMakeLists.txt  display.c  display.h
components/ft5x46/: CMakeLists.txt  CTP_FT5446.c  CTP_FT5446.h
components/gt9xx/: CMakeLists.txt  CTP_gt9xx.c  CTP_gt9xx.h
components/lcd_backlight/: CMakeLists.txt  lcd_backlight.c  lcd_backlight.h
components/twai/: BSP_TWAI.c  BSP_TWAI.h  CMakeLists.txt
main/: idf_component.yml  main.c
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_tw1616.c
main/ui/images/: ui_img_000_png.c  ui_img_1079216036.c  ui_img_152448348.c  ui_img_689278962.c  ui_img_flower_b_800x480_png.c  ui_img_flower_r_800x480_png.c  ui_img_img_800x480_png.c
main/ui/screens/: ui_GPIO.c  ui_GPIO.h  ui_Screen1.c  ui_Screen1.h  ui_backlight.c  ui_backlight.h  ui_canClass.c  ui_canClass.h  ui_imgView.c  ui_imgView.h
